kube/wiki/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: armeria-wiki
spec:
  type: ClusterIP
  ports:
    - name: psql
      port: 5432
      targetPort: psql
      protocol: TCP
  selector:
    app: postgresql-db
