kube/wiki/wikijs-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: armeria-wiki
spec:
  selector:
    app: wikijs
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: http
