kube/wiki/wikijs-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: wikijs
  annotations:
    networking.gke.io/managed-certificates: wikijs-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: wikijs
      port:
        number: 3000
